@@ -33,6 +33,7 @@ Zend Framework                                                             NEWS
 - Zend_Uri_Http now uses the default Zend_Filter::isHostname() rules. (Mike)
 - Fixed multipart/alternative handling when other attachments present in
   Zend_Mail, ticket #59, changeset [583]. (Matthew)
+- Fixed multiple bugs in Zend_Http_Client, ticket #133. (Mike)
 
 =RELEASE 0.1.3 / 18-Apr-2006=
 - Zend_Filter is* methods return strictly TRUE or FALSE. (Chris)
